# sftp-s3-rs

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: local_server.rs  memory_server.rs  pubkey_server.rs  s3_server.rs
scripts/: cross-compile.sh  pre-commit  setup-hooks.sh
src/: error.rs  lib.rs  main.rs  server.rs  sftp_handler.rs  ssh_handler.rs
src/backend/: local.rs  memory.rs  mod.rs  s3.rs
src/handle/: mod.rs
